# oncokb-annotator

./: pyproject.toml
conda/: README.md  meta.yaml
requirements/: common.txt  pip3.txt
