[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "oncokb-annotator"
version = "3.4.1"
description = "Annotates variants in MAF with OncoKB annotation."
readme = "README.md"
license-files = ["LICENSE"]
dependencies = [
  "requests",
  "urllib3"
]

[project.urls]
Repository = "https://github.com/oncokb/oncokb-annotator"

[tool.setuptools.packages]
find = {}

[tool.setuptools]
script-files = [
    "AnnotatorCore.py",
    "ClinicalDataAnnotator.py",
    "CnaAnnotator.py",
    "FusionAnnotator.py",
    "MafAnnotator.py",
    "StructuralVariantAnnotator.py"
    ]